Update UPI ID placeholder text to Hindi

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ button{
   <p>Wallet: ₹<span id="wallet">0.00</span></p>
   <button id="payBtn">Pay ₹1</button>
 
-  <input id="upi" placeholder="Enter your UPI ID">
+  <input id="upi" placeholder="पैसे निकालने के लिए UPI ID डाले">
   <button onclick="withdraw()">Withdraw</button>
 
   <p id="status" class="info"></p>
